--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         }
         .side-data {
           padding-top: 3em;
+
+        }
+        .side-data i:hover {
+          color:#3ebcb3;
         }
         nav.top-nav h1.header {
           padding-top: 0px;
@@ -31,6 +35,7 @@
         }
         nav .brand-logo {
           padding-top: 9px;
+
         }
         nav {
           background-color: #fff;
@@ -50,7 +55,10 @@
         }
         .card img {
           width: 70px;
-          height: 70px;
+          height: 60px;
+        }
+        .side-icons:hover {
+          color: #3ebcb3 !important;
         }
         .blue-grey.darken-1 {
           background-color: #fafafa !important;
@@ -60,14 +68,20 @@
         }
         .footer-own {
           text-align: center;
+          padding-top: 5em;
         }
+        .icon-social {
+          padding-right: 2em;
+          display: inline-block;
+        }
+        
       </style>
 
     </head>
 
     <body>
 
-      <div class="wrapper z-depth-2">
+      <div class="wrapper z-depth-1">
 
     <div class="">
 
@@ -75,7 +89,7 @@
         <div class="container">
           <div class="nav-wrapper">
             <div class="row">
-              <a href="#" class="brand-logo"><img src="media/logo.png"></a>
+              <a href="#" class="brand-logo"><img src="media/full_logo1.png"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#"><i class="large material-icons top-icons">notifications_none</i></a></li>
                 <li><a href="#"><i class="large material-icons top-icons">account_circle</i></a></li>
@@ -90,9 +104,9 @@
 
   <div class="side-data">
     <ul id="slide-out" class="sidenav sidenav-fixed">
-      <li><a href="#!"><i class="small material-icons">dashboard</i></a></li>
-      <li><a href="#!"><i class="small material-icons">search</i></a></li>
-      <li><a href="#!"><i class="small material-icons">store</i></a></li>
+      <li><a href="#!"><i class="small material-icons side-icons">dashboard</i></a></li>
+      <li><a href="#!"><i class="small material-icons side-icons">search</i></a></li>
+      <li><a href="#!"><i class="small material-icons side-icons">store</i></a></li>
 
     </ul>
   </div>
@@ -362,10 +376,16 @@
   </div>
 
             <div class="footer-own">
-              <div>
+              <div class="icon-social">
                 <a class="waves-effect waves-light btn-floating btn-large social twitter"><i class="fa fa-twitter"></i></a>
+              </div>
+              <div class="icon-social">
                 <a class="waves-effect waves-light btn-floating btn-large social linkedin"><i class="fa fa-linkedin"></i></a>
+              </div>
+              <div class="icon-social">
                 <a class="waves-effect waves-light btn-floating btn-large social instagram"><i class="fa fa-instagram"></i></a>
+              </div>
+              <div class="icon-social">
                 <a class="waves-effect waves-light btn-floating btn-large social facebook"><i class="fa fa-facebook"></i></a>
               </div>
               <h6 style="color: #bababa;">
@@ -375,7 +395,7 @@
                 All Rights Reserved.
             </h6>
             <h6">
-              <a style="color: #bababa;" href="#"><u>Privacy Policy</u> </a> | <a style="color: #bababa;" href="#"><u>Terms of Service</u></a> | <a style="color: #bababa;" href="#"><u>Service Agreement</u></a> | <a style="color: #bababa;" href="#"><u>Contact Us</u></a>
+              <a style="color: #bababa;" href="#"><u>Privacy Policy</u> </a> &nbsp;|&nbsp; <a style="color: #bababa;" href="#"><u>Terms of Service</u></a>&nbsp; | &nbsp;<a style="color: #bababa;" href="#"><u>Service Agreement</u></a>&nbsp; |&nbsp; <a style="color: #bababa;" href="#"><u>Contact Us</u></a>
 
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
