--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           background-color: #fff;
         }
         .top-icons {
-          color: black;
+          color: black; //We can write color code as well
         }
         .top-card {
           width: 70vw;
